<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:fitsSystemWindows="true"
    tools:context=".FullscreenActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/btn_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/roundCount"
                android:layout_alignBottom="@+id/roundCount"
                android:layout_alignParentLeft="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/roundTime"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/roundCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="@string/rounds"
                android:inputType="number"
                android:width="100dp" />

            <EditText
                android:id="@+id/cooldownTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView2"
                android:layout_alignParentRight="true"
                android:ems="10"
                android:hint="@string/hint_min"
                android:inputType="numberDecimal"
                android:width="100dp" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="58dp"
                android:text="@string/reset"
                android:width="70dp" />

            <Button
                android:id="@+id/btnQuit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnReset"
                android:layout_alignBottom="@+id/btnReset"
                android:layout_alignParentRight="true"
                android:text="@string/quit"
                android:width="70dp" />

            <TextView
                android:id="@+id/timerValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/timer"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/roundTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/work"
                android:inputType="numberDecimal"
                android:width="100dp" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/txtDebug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnReset"
                android:layout_alignBottom="@+id/btnReset"
                android:layout_toRightOf="@+id/roundCount"
                android:text="@string/large_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ProgressBar
                android:id="@+id/progressBarRoundsCircular"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerInParent="true"
                android:indeterminate="false"
                android:max="48"
                android:progress="45"
                android:progressDrawable="@layout/circular_progress_bar"
                android:visibility="visible" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timerValue"
                android:layout_centerHorizontal="true"
                android:gravity="left"
                android:text="/"
                android:textAlignment="gravity"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/currRound"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timerValue"
                android:layout_toLeftOf="@+id/TextView02"
                android:gravity="right"
                android:text="100"
                android:textAlignment="gravity"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:width="100dp" />

            <TextView
                android:id="@+id/totalRounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timerValue"
                android:layout_toRightOf="@id/TextView02"
                android:gravity="left"
                android:text="900"
                android:textAlignment="gravity"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </RelativeLayout>

    </FrameLayout>

</FrameLayout>
